package com.deviantsatyr.healthy.uiutils;

public interface Navigator {
    void navigateWith(String meal);
}
